<resources>
    <string name="app_name">ScooterSharing</string>
    <string name="add_button">Add Ride</string>
    <string name="last_added_field">Last added:</string>
    <string name="name_field">Name:</string>
    <string name="where_field">Where:</string>
    <string name="start_button">Start Ride</string>
    <string name="info_text">Info</string>
    <string name="update_button">Update Ride</string>
    <string name="ride_history_button">Ride History</string>
    <string name="list_button">List Rides</string>
    <string name="title">Title</string>
    <string name="where">Where</string>
    <string name="when">DateTime</string>
    <string name="backitup">Go Back</string>
    <string name="mainpage">Back to main screen</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="content_description_sign_out">Sign out</string>
    <string name="content_description_image">Image</string>
    <string name="firebase_authentication">Firebase\nAuthentication</string>
    <string name="firebase_user_description">You are already logged in as %s, you need to log out before logging in as different user.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="cardNumber">Card Number</string>
    <string name="expDate">Expiration Date</string>
    <string name="cvc">CVC</string>
    <string name="payment">COMPLETE PAYMENT</string>
    <string name="mobilepay">CONTINUE WITH MOBILEPAY</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="text_tab_1">Location-Aware</string>
    <string name="text_tab_2">Google Maps</string>
    <string name="latitude_text">LATITUDE</string>
    <string name="longitude_text">LONGITUDE</string>
    <string name="time_text">TIME</string>
    <string name="content_description_location">Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA-jIAcJ2SHWO1G7DktvNyIDbCIl5jLJBk</string>
    <string name="coordinates">Coordinates:</string>
    <string name="updatedAt">Updated at:</string>
    <string name="createdAt">Created at:</string>
    <string name="submit">submit</string>
    <string name="Payments">Payment Settings</string>
    <string name="rideMessage" formatted="true">You are currently riding a scooter</string>
    <string name="endButton">End Ride</string>
    <string name="startDate">Rented at:</string>
    <string name="price">Price:</string>
    <string name="Receipt">Receipt</string>
    <string name="duration">Duration of ride:</string>
</resources>