<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PaymentFragment"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="301dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstName" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/lastName" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/dateofbirth" />

        <EditText
            android:id="@+id/dateofbirth"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:inputType="date"
            android:hint="dd/mm/yyyy"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:text="@string/cardNumber" />

        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="2"
            android:text="@string/expDate" />

        <EditText
            android:id="@+id/expDate"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="2"
            android:inputType="date"
            android:maxLength="5"
            android:hint="mm/yy"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/cvc"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:inputType="number"
            android:maxLength="3"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/cvc" />

    </GridLayout>

    <Button
        android:id="@+id/payment"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_gravity="center"
        android:text="@string/payment"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/mobilepay"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_row="6"
        android:layout_column="2"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_vector_mp"
        android:backgroundTint="@color/babyblue"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>