<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.StartRideFragment">


    <!-- Which scooter -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_field"/>

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <!-- Button to add rides-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"
        android:layout_gravity="center"
        android:text="@string/start_button"/>

    <Button
        android:id="@+id/goBack"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/backitup" />


</LinearLayout>